[tool.poetry]
name = "zerolab"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.2"
llama-index = "^0.4.29"
langchain = "^0.0.115"
unstructured = "^0.5.4"
chromadb = "^0.3.11"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
